# property_parser3

./: .coverage  .gitignore  Dockerfile  Dockerfile.llm  Procfile  README.md  cleanup_db.py  db_inspect.py  generate_session.py  main.py  migrate_to_bigint.py  nixpacks.llm.toml  nixpacks.toml  pyproject.toml  railway.llm.toml  railway.toml  reinit_db.py  requirements.txt  run_service.sh  setup.py  start_llm.sh
services/llm_processor/: railway.toml
services/parser/: railway.toml
src/: service.py
src/config/: settings.py
src/database/: engine.py  models.py
src/database/migrations/: add_message_link.py
src/llm_processor/: Procfile  config.py  processor.py  railway.toml  schemas.py  service.py
src/parser/: telegram_parser.py
src/telegram/: session_manager.py
tests/: conftest.py  test_models.py  test_parser.py
